fixing navbar issue on mobile

--- a/scss/sections/_intro-section.scss
+++ b/scss/sections/_intro-section.scss
@@ -17,6 +17,7 @@
     margin: 4rem;
 
     img {
+      z-index: 1;
       position: relative;
       width: 20rem;
     }
